--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "LD28",
+  "name": "LD29",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.2",
@@ -10,6 +10,7 @@
     "grunt-zip": "~0.12.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-text-replace": "~0.3.10",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+     "coffee-script": "~1.6.3"
   }
 }
