--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-text-replace": "~0.3.10",
     "grunt-contrib-clean": "~0.5.0",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "grunt-phonegap": "~0.13.3"
   }
 }
