broken script node

--- a/LD29.csproj
+++ b/LD29.csproj
@@ -29,17 +29,45 @@
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="src\main\d.ts\compassjs.d.ts" />
+    <TypeScriptCompile Include="src\main\d.ts\waa.d.ts" />
     <TypeScriptCompile Include="src\main\ts\app.ts" />
     <TypeScriptCompile Include="src\main\d.ts\hammerjs.d.ts" />
     <TypeScriptCompile Include="src\main\d.ts\jquery.d.ts" />
     <TypeScriptCompile Include="src\main\d.ts\XSLTProcessor.d.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\AbstractLoopingState.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\AbstractState.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\Home\HomeData.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\Home\HomeState.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\IState.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\IStateListener.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\IMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\IMindFactory.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\ISpawner.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\ITone.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\IToneFactory.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Level.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\AbstractEnemyMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\BulletMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\CreeperMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\DummyMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\ExplosionMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\IMonsterFactory.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\PlayerInput.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\PlayerMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Mind\SpinningMind.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Monster.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\Play\PlayData.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\Play\PlayState.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Spawner\RandomSpawner.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Spawner\RandomSpawnerWeight.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\ToneSequencer.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\ToneSequencerBar.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Tone\NoTone.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Tone\OneShotToneProxy.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Tone\WebAudioManualPannerTone.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Tone\WebAudioManualPannerToneProxy.ts" />
+    <TypeScriptCompile Include="src\main\ts\GB\State\Play\Tone\WebAudioSynthTone.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\State\StateEngine.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\Transformer\ITemplateTransformerFactory.ts" />
     <TypeScriptCompile Include="src\main\ts\GB\Transformer\ITransformer.ts" />
